[package]
name = "ping-fuckuper"
version = "0.1.0"
authors = ["WGH <wgh@torlan.ru>"]
edition = "2018"

[profile.release]
lto = "thin"
debug = true

[dependencies]
clap = { version = "3.1.14", features = ["derive"] }
env_logger = { version = "0.8.3", default-features = false }
log = "0.4.14"
nfq = "0.2.4"
pnet = "0.28.0"
